--- a/about/index.html
+++ b/about/index.html
@@ -133,7 +133,7 @@ About Me I’m deeply fascinated by how programming languages work and how compi
 
   </main>
   <footer><small>
-   | 
+   All Copyright (c) 2026 Clint Rori. All Rights Reserved. 
 </small></footer>
 
     
