--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 
 
-  
   <meta property="og:url" content="https://rorimwema.github.io/">
   <meta property="og:site_name" content="Clint Rori">
   <meta property="og:title" content="Home">
@@ -100,7 +99,7 @@ Currently working on AI infrastructure. Writing about what I learn along the way
 
   </main>
   <footer><small>
-   | 
+   All Copyright (c) 2026 Clinton Rori. All Rights Reserved.  
 </small></footer>
 
     
