--- a/public/404.html
+++ b/public/404.html
@@ -34,38 +34,31 @@
   
   <meta itemprop="name" content="404 Page not found">
 
-<meta name="referrer" content="no-referrer-when-downgrade" />
-
-  
-  <link href="/original.min.css" rel="stylesheet">
-
-  
-
-  
-
-  
-</head>
+<meta name="referrer" content="no-referrer-when-downgrade" /><link href="/original.min.css" rel="stylesheet"><link href="/custom.min.css" rel="stylesheet"><link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet"></head>
 
 <body>
-  <header><a class="skip-link" href="#main-content">Skip to main content</a>
-
-<a href="/" class="title"><h1>Clint Rori</h1></a>
-<nav>
-<a href='https://rorimwema.github.io/index.xml'>RSS</a>
-
-
-
-
-
-
-
-</nav>
-</header>
+  <header>
+    <a href="https://rorimwema.github.io/" style="font-weight: bold; font-size: 1.2rem; text-decoration: none; color: #111;">Clint Rori</a><nav>
+  <ul><li>
+      <a href="/" >
+        Home
+      </a>
+    </li><li>
+      <a href="/posts/" >
+        Posts
+      </a>
+    </li><li>
+      <a href="/about/" >
+        About
+      </a>
+    </li></ul>
+</nav></header>
   <main id="main-content">
 <h1>404</h1>
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
-
-  </main><footer>
+</main><footer style="border-top: 1px solid #ccc; margin-top: 40px; padding: 20px; text-align: center;">
   <small>
     Built with Hugo | 2026 Clint Rori
   </small>
