--- a/public/404.html
+++ b/public/404.html
@@ -9,7 +9,7 @@
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="" />
 <meta name="author" content="" />
-<meta name="keywords" content="" />
+<meta name="keywords" content="poems &amp; philosophy,programming,coding,philosophy," />
 
 
 
@@ -52,6 +52,10 @@
     </li><li>
       <a href="/about/" >
         About
+      </a>
+    </li><li>
+      <a href="/categories/" >
+        Categories
       </a>
     </li></ul>
 </nav></header>
