--- a/public/about/index.html
+++ b/public/about/index.html
@@ -70,6 +70,10 @@ My Toolbox (Affectionately Overcomplicated) OCaml — My comfort zone. Currently
       <a href="/about/" >
         About
       </a>
+    </li><li>
+      <a href="/categories/" >
+        Categories
+      </a>
     </li></ul>
 </nav></header>
   <main id="main-content">
@@ -80,6 +84,7 @@ My Toolbox (Affectionately Overcomplicated) OCaml — My comfort zone. Currently
       <span>January 20, 2026</span>
       <span>&bull;</span>
       <span>2 min read</span>
+      
       
     </div>
   </header>
