--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <meta name="title" content="Home" />
 <meta name="description" content="" />
 <meta name="author" content="" />
-<meta name="keywords" content="poems &amp; philosophy,programming,coding,philosophy," />
+<meta name="keywords" content="poems &amp; philosophy,programming," />
 
 
 
