Add Projects page with minimal design and improve mobile menu

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -67,6 +67,10 @@ My Toolbox (Affectionately Overcomplicated) OCaml — My comfort zone. Currently
         Posts
       </a>
     </li><li>
+      <a href="/projects/" >
+        Projects
+      </a>
+    </li><li>
       <a href="/about/" >
         About
       </a>
