--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,10 @@ Brain dumps on code, unexpected bugs, and “aha!” moments. Projects I’m tin
         Posts
       </a>
     </li><li>
+      <a href="/projects/" >
+        Projects
+      </a>
+    </li><li>
       <a href="/about/" >
         About
       </a>
