--- a/public/404.html
+++ b/public/404.html
@@ -50,6 +50,10 @@
         Posts
       </a>
     </li><li>
+      <a href="/projects/" >
+        Projects
+      </a>
+    </li><li>
       <a href="/about/" >
         About
       </a>
