Add Now page and 3 new projects: Flowy, Lisp Interpreter, Crawlr

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,10 @@ Brain dumps on code, unexpected bugs, and “aha!” moments. Projects I’m tin
         Projects
       </a>
     </li><li>
+      <a href="/now/" >
+        Now
+      </a>
+    </li><li>
       <a href="/about/" >
         About
       </a>
