--- a/public/about/index.html
+++ b/public/about/index.html
@@ -71,6 +71,10 @@ My Toolbox (Affectionately Overcomplicated) OCaml — My comfort zone. Currently
         Projects
       </a>
     </li><li>
+      <a href="/now/" >
+        Now
+      </a>
+    </li><li>
       <a href="/about/" >
         About
       </a>
