--- a/public/projects/nvim-config/index.html
+++ b/public/projects/nvim-config/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,7 @@
 
 
   
-  <meta property="og:url" content="https://rorimwema.github.io/projects/nvim-config/">
+  <meta property="og:url" content="http://localhost:1313/projects/nvim-config/">
   <meta property="og:site_name" content="Clint Rori">
   <meta property="og:title" content="Neovim Config">
   <meta property="og:description" content="A highly customized, blazing fast Neovim configuration written in Lua.">
@@ -49,7 +49,7 @@
 
 <body>
   <header>
-    <a href="https://rorimwema.github.io/" style="font-weight: bold; font-size: 1.2rem; text-decoration: none; color: #111;">Clint Rori</a><nav>
+    <a href="http://localhost:1313/" style="font-weight: bold; font-size: 1.2rem; text-decoration: none; color: #111;">Clint Rori</a><nav>
   <ul><li>
       <a href="/" >
         Home
