--- a/public/about/index.html
+++ b/public/about/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="shortcut icon" href="http://localhost:1313/buddha-icon.svg" />
 <title>About Me | Clint Rori</title>
 <meta name="title" content="About Me" />
 <meta name="description" content="I believe computers are simple. It&rsquo;s us humans who keep making them complicated.
