--- a/public/now/index.html
+++ b/public/now/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="shortcut icon" href="http://localhost:1313/buddha-icon.svg" />
 <title>Now | Clint Rori</title>
 <meta name="title" content="Now" />
 <meta name="description" content="What I&#39;m up to these days" />
