--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="shortcut icon" href="http://localhost:1313/buddha-icon.svg" />
 <title>Projects | Clint Rori</title>
 <meta name="title" content="Projects" />
 <meta name="description" content="Things I&#39;ve built, broken, and rebuilt." />
